--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RTX GAMING</title>
+    <title>MRAKBOT MUSIC</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1170652474563117138/1224660177039396876/MULTI_MUSIC_v1.5.png?ex=661e4cab&is=660bd7ab&hm=f7a542462fabaf9c1530ece5aa72597cff3ac032876bba46df5ddba7e122ea99&');
+            background-image: url('https://cdn.discordapp.com/attachments/1236617830846300231/1236662411554066532/MrakBot_20240411_043417_0000.png?ex=6638d31e&is=6637819e&hm=5104807ca16f44e8e6d5d49421915f119e8d97ab3b616fe137f25b189354a668&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
